/* Derived terms */ <badger#42209253>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -29,7 +29,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * {{sense|mammal}} {{l|en|cete}}, {{l|en|colony}}
 
 =====Derived terms=====
-{{der3|title=Terms derived from ''badger'' (noun)|American badger|European badger|{{vern|ferret-badger}} ({{taxlink|Melogale|genus|noshow=1|ver=161103}})|{{vern|hog badger}} ({{taxlink|Arctonyx collaris|species|noshow=1|ver=161103}})|honey badger|stink badger|lang=en}}
+{{der3|title=Terms derived from ''badger'' (noun)|American badger|European badger|{{vern|ferret-badger}} ({{taxlink|Melogale|genus|noshow=1|ver=161103}})|{{vern|hog badger}} ({{taxlink|Arctonyx collaris|species|noshow=1|ver=161103}})|honey badger|stink badger|badgerlike|Eurasian badger|badger game|badger dog|sand badger|Asian badger|lang=en}}
 
 =====Translations=====
 {{trans-top|mammal}}
