--- a/en/m/misbegotten.720286.wikitext
+++ b/en/m/misbegotten.720286.wikitext
@@ -4,8 +4,8 @@
 {{prefix|mis|begotten|lang=en}}
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ˌmɪsbᵻˈɡɒtn/|lang=en}}
-* {{a|US}} {{IPA|/ˌmɪsbəˈɡɑtn/|lang=en}}
+* {{a|RP}} {{IPA|/ˌmɪsbɪˈɡɒtn̩/|lang=en}}
+* {{a|GA}} {{IPA|/ˌmɪsbɪˈɡɑtn̩/|lang=en}}
 
 ===Noun===
 {{en-noun|!}}
