t+umu:[[xwáshkwshush]] ([[WT:EDIT|Assisted]]) <muskrat#42234670>

--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -71,6 +71,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a {{m|en|
 * Luxembourgish: {{t|lb|Bisamrat}}
 * Macedonian: {{t|mk|бизамски стаорец|m}}
 * Maltese: {{t|mt|far tal-misk ta’ l-ilma}}
+* Munsee: {{t|umu|xwáshkwshush}}
 * Navajo: {{t|nv|tooh łéʼétsoh}}
 * Norwegian: {{t|no|bisamrotte}}
 * Pashto: {{t-needed|ps}}
