--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -256,6 +256,29 @@ From {{etyl|sqj-pro|sq}} {{m|sqj-pro|*bind-}}, from {{etyl|ine-pro|sq}} {{m|ine-
 
 ----
 
+==Faroese==
+
+===Etymology===
+{{PIE root|fo|bʰendʰ}}
+From the verb {{m|fo|binda}}.
+
+===Noun===
+{{fo-noun|n|binds|bind}}
+
+# a book [[binding]]
+# a book [[jacket]] or [[cover]]
+# a book [[band]]
+# a [[volume]] (''single book of a publication'')
+# a [[bandage]]
+# [[armlet]], [[brassard]]
+# a [[sanitary napkin]] (US) or [[sanitary towel]] (UK)
+# [[truss]]
+
+====Declension====
+{{fo-decl-noun-n3|bind}}
+
+----
+
 ==Norwegian Bokmål==
 
 ===Pronunciation===
