--- a/en/d/dtn.855030.wikitext
+++ b/en/d/dtn.855030.wikitext
@@ -4,7 +4,7 @@
 ===Adjective===
 {{en-adj|-}}
 
-# [[duplex]], [[tray]], [[network]]: In relation to the selling of [[laser printers]], a designation that a [[printer]] has ''duplex'' (double sided printing) capability, paper trays and is 'networkable.
+# [[duplex]], [[tray]], [[network]]: In relation to the selling of [[laser printers]], a designation that a [[printer]] has ''duplex'' (double sided printing) capability and paper trays and is [[networkable]].
 
 ===References===
 * http://acronyms.thefreedictionary.com/DTN
