--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -138,7 +138,13 @@ From {{der|ca|la|ructus}}.
 ===Noun===
 {{ca-noun|m}}
 
-# [[belcher]]
+# [[belch]]
+
+====Related terms====
+* {{l|ca|rotar}}
+
+====External links====
+* {{R:IEC2}}
 
 ----
 
