--- a/en/m/mackles.801842.wikitext
+++ b/en/m/mackles.801842.wikitext
@@ -7,7 +7,8 @@
 
 ===Verb===
 {{head|en|verb form}}
-# He/she/it form of [[mackle]].
+
+# {{en-third-person singular of|mackle}}
 
 [[ar:mackles]]
 [[fr:mackles]]
