--- a/en/u/unconventionality.742221.wikitext
+++ b/en/u/unconventionality.742221.wikitext
@@ -1,7 +1,11 @@
 ==English==
 
+===Etymology===
+{{prefix|en|un|conventionality}}
+
 ===Noun===
 {{en-noun|-}}
+
 # The state of being [[unconventional]].
 
 [[ko:unconventionality]]
