--- a/en/u/unconventionality.742221.wikitext
+++ b/en/u/unconventionality.742221.wikitext
@@ -4,7 +4,7 @@
 {{prefix|en|un|conventionality}}
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|~|unconventionalities}}
 
 # The state of being [[unconventional]].
 
