t+mn:[[бутархай тоо]] ([[WT:EDIT|Assisted]]) <fraction#42277852>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -109,6 +109,7 @@ From {{etyl|enm|en}} {{m|enm|fraccioun||a breaking}}, from {{etyl|xno|en}}, from
 * Japanese: {{t+|ja|分数|tr=bunsū}}
 {{trans-mid}}
 * Macedonian: {{t|mk|дропка|f|tr=drópka}}
+* Mongolian: {{t|mn|бутархай тоо}}
 * Norwegian: {{t+|no|brøk|m}}
 * Persian: {{t+|fa|کسر}}
 * Polish: {{t+|pl|ułamek|m}}
