--- a/en/h/hairnet.34110.wikitext
+++ b/en/h/hairnet.34110.wikitext
@@ -11,7 +11,7 @@
 ===Noun===
 {{en-noun}}
 
-# A [[net]] designed to [[keep]] [[hair]] up and out of the way. (used, e.g., while cooking)
+# A [[net]] designed to [[keep]] [[hair]] up and out of the way, e.g. while [[cook]]ing.
 
 ====Hyponyms====
 * {{l|en|shpitzel}}
