--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -186,6 +186,8 @@ From {{etyl|enm|en}} {{m|enm|fraccioun||a breaking}}, from {{etyl|xno|en}}, from
 
 ===External links===
 * {{R:TLFi}}
+ 	
+[[Category:en:Numbers]]
 
 [[ar:fraction]]
 [[az:fraction]]
