--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -1,5 +1,5 @@
 ==English==
-[[Image:Eichhörnchen Düsseldorf Hofgarten edit.jpg|thumb|Red squirrel|250px]]
+[[Image:Eichhörnchen Düsseldorf Hofgarten edit.jpg|thumb|A squirrel|250px]]
 {{wikipedia}}
 
 ===Etymology===
