t+fa:[[موک]] ([[WT:EDIT|Assisted]]) <mouflon#42290148>

--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -53,6 +53,7 @@ From {{etyl|fr|en}} {{m|fr|mouflon}}, from {{cog|it|muflone}}, from {{cog|LL.|mu
 * Navajo: {{t|nv|tó wónaanídę́ę́ʼ dibé ałchiní}}
 * Norwegian: {{t|no|mufflon}}
 * Occitan: {{t+|oc|moflon}}
+* Persian: {{t+|fa|موک|tr=muk}}
 * Polish: {{t|pl|muflon}}
 * Portuguese: {{t|pt|muflão|m}}
 * Romanian: {{t+|ro|muflon|m}}
