--- a/en/d/doncella.803303.wikitext
+++ b/en/d/doncella.803303.wikitext
@@ -20,7 +20,7 @@ From a {{inh|es|VL.|*domnicella}} (cf. Old Provençal {{m|pro|donçela}}, Portug
 
 ===Pronunciation===
 * {{a|Castilian}} {{IPA|/donˈθe.ʎa/|lang=es}}
-* {{a|Others}} {{IPA|/donˈse.ʝa/, /donˈse.ʎa/, /donˈθe.ʝa/|lang=es}}
+* {{a|Others}} {{IPA|/donˈse.ʝa/|/donˈse.ʎa/|/donˈθe.ʝa/|lang=es}}
 
 ===Noun===
 {{es-noun|f}}
