--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -384,8 +384,8 @@ From {{etyl|fro|fr}}, borrowed from {{etyl|la|fr}} {{m|la|simplex}}.
 #: ''Un homme simple''
 #:: ''A simple man''
 # {{l|en|one-way}}
-#: ''Un billet simple.''
-#:: ''A one-way ticket.''
+#: ''Un billet simple''
+#:: ''A one-way ticket''
 # {{l|en|mere}}
 #: ''Un simple soldat''
 #:: ''A mere soldier''
