--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -317,7 +317,7 @@
 From {{inh|fr|fro|-}}, a {{bor|fr|la|divisio|divisio, divisionem|nocap=1}}, noun of process form from perfect passive participle {{m|la|divisus||divided}}, from {{m|la|dīvidō||divide}}
 
 ===Pronunciation===
-* {{IPA|/di.vi.zjɔ̃/|lang=fr}}
+* {{fr-IPA}}
 * {{audio|Fr-division.ogg|Audio|lang=fr}}
 
 ===Noun===
