--- a/en/c/count down.856261.wikitext
+++ b/en/c/count down.856261.wikitext
@@ -19,7 +19,7 @@
 * Chinese:
 *: Mandarin: {{t|cmn|倒讀數}}, {{t|cmn|倒读数|tr=dàodúshù}}, {{t+|cmn|倒計時}}, {{t+|cmn|倒计时|tr=dàojìshí}}, {{t+|cmn|倒數}}, {{t+|cmn|倒数|tr=dàoshǔ}}
 * Esperanto: {{t|eo|dekalkuli}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|laskea}}
 {{trans-mid}}
 * French: {{t+|fr|décompter}}
 * German: {{t-needed|de}}
@@ -31,7 +31,7 @@
 * Chinese:
 *: Mandarin: {{t+|cmn|盼望|tr=pànwàng}}, {{t|cmn|盼著}}, {{t|cmn|盼着|tr=pànzhe}}
 * Esperanto: {{t-needed|eo}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|laskea}}
 {{trans-mid}}
 * French: {{t+|fr|décompter}}
 * German: {{t-needed|de}}
