--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -164,6 +164,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Marathi: {{t|mr|वस्तु}}
 * Mirandese: {{t|mwl|cousa|f}}
 * Mongolian: {{t+|mn|зүйл|sc=Cyrl}}, {{t+|mn|юм|sc=Cyrl}}
+* Mwani: {{t|wmw|kinu}}
 * Norwegian: {{t+|no|ting|m}}, {{t|no|dings|m}}, {{t+|no|greie|f}}
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|вєшть|f|sc=Cyrs}}
