--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -95,6 +95,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Maori: {{t|mi|ngawaki}} {{qualifier|refers to knees}}, {{t|mi|whakapiko}}, {{t|mi|whatiwhati}} {{qualifier|Refers to bending the legs when running}}
 * Mongolian: {{t-needed|mn}}
 * Norwegian: {{t+|no|bøye}}
+* Occitan: {{t|oc|corbar}}
 * Persian: {{t-needed|fa}}
 * Polish: {{t+|pl|zgiąć|pf}}, {{t+|pl|zginać|impf}}, {{t+|pl|giąć|impf}}
 * Portuguese: {{t+|pt|dobrar}}, {{t+|pt|curvar}}
