--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -125,6 +125,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Hebrew: {{t|he|התכופף|tr=hitkoféf}}
 * Ido: {{t+|io|kurveskar}}
 * Japanese: {{t|ja|曲がる|tr=magaru}}
+* Occitan: {{t|oc|se corbar}}
 * Portuguese: {{t|pt|dobrar-se}}, {{t|pt|curvar-se}}
 {{trans-mid}}
 * Russian: {{t+|ru|гну́ться}}, {{t+|ru|изгиба́ться}}
