--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -179,6 +179,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Dutch: {{t+|nl|onderwerpen}}
 * Finnish: {{t+|fi|taivuttaa}}
 * French: {{t+|fr|soumettre}}
+* Occitan: {{t|oc|far plegar}}
 * Portuguese: {{t+|pt|obrigar}}
 * Spanish: {{t+|es|doblegar}}
 {{trans-mid}}
