====Usage notes==== * See notes at {{m|en|advertize}}. <advertizement#42342510>

--- a/en/a/advertizement.855998.wikitext
+++ b/en/a/advertizement.855998.wikitext
@@ -5,6 +5,9 @@
 
 # {{alternative spelling of|advertisement|lang=en}}
 
+====Usage notes====
+* See notes at {{m|en|advertize}}.
+
 [[pl:advertizement]]
 [[simple:advertizement]]
 [[fi:advertizement]]
