--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -146,7 +146,7 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 * Uyghur: {{t|ug|جاناپ}}
 * Uzbek: {{t+|uz|janob}}, {{t|uz|agʻa}}
 * Vietnamese: {{t+|vi|ngài}}, {{t+|vi|ông}}
-* Yiddish: {{t|yi|מײַן הער|m}}
+* Yiddish: {{t|yi|הער|m}}
 {{trans-bottom}}
 
 {{checktrans-top}}
