--- a/en/o/on first-name terms.742239.wikitext
+++ b/en/o/on first-name terms.742239.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
-===Adjective===
-{{head|en|adjective|head=[[on]] [[first name]] [[terms]]}}
+===Prepositional phrase===
+{{en-PP}}
 
 # [[familiar]] with someone, such that one can address that person by his or her first name.
 # {{lb|en|by extension|humorous}} in regular [[contact]] with a person or [[organisation]].
@@ -9,5 +9,3 @@
 
 ====Usage notes====
 * Often followed by the preposition "with," as in "He's '''on first name terms''' with the president."
-
-[[Category:English prepositional phrases]]
