--- a/en/w/Walrasian.776650.wikitext
+++ b/en/w/Walrasian.776650.wikitext
@@ -6,7 +6,7 @@
 ===Adjective===
 {{en-adj}}
 
-# {{lb|en|economics}} Of or pertaining to the theories of the 19th century French [[economist]] {{w|Léon Walras}}.
+# {{lb|en|economics}} Of or pertaining to the theories of the 19th-century French [[economist]] {{w|Léon Walras}}.
 # {{lb|en|economics}} Relating to a [[tatonnement]] process for achieving exchange equilibrium.
 #: ''a '''Walrasian''' auction''
 
