--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -91,7 +91,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Irish: {{t|ga|ag}}
 * Italian: {{t+|it|a}}, {{t+|it|in}}
 * Japanese: {{t+|ja|で|tr=...de|alt=...で|sc=Jpan}}, {{t+|ja|に|tr=...ni|alt=... に|sc=Jpan}}
-* Korean: {{t+|ko|에서|tr=...eso|alt=...에서|sc=Kore}}
+* Korean: {{t+|ko|에서|alt=...에서|sc=Kore}}
 * Kurdish:
 *: Kurmanji [[li]]
 *: Sorani: ([[le]])
@@ -130,7 +130,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 *: ''At the table'' = vid bordet
 * Tamil: {{t-needed|ta}}
 * Telugu: {{t+|te|వద్ద}}
-* Thai: {{t+|th|ที่|tr=têe|sc=Thai}}
+* Thai: {{t+|th|ที่|sc=Thai}}
 * Tok Pisin: {{t|tpi|long}}
 * Turkish: {{t+|tr|-da}}, {{t+|tr|-de}}
 * Ukrainian: {{t+|uk|у|sc=Cyrl}} / {{t+|uk|в|sc=Cyrl}}, {{t|uk|при|sc=Cyrl}}, {{t+|uk|біля́|sc=Cyrl}}
@@ -162,7 +162,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Italian: {{t+|it|a}}
 {{trans-mid}}
 * Japanese: {{t+|ja|に|tr=...ni|alt=...に|sc=Jpan}}
-* Korean: {{t+|ko|에|tr=...e|alt=...에|sc=Kore}}
+* Korean: {{t+|ko|에|alt=...에|sc=Kore}}
 * Kurdish:
 *: Kurmanji: {{t+|kmr|li}}
 *: Sorani: ([[le]])
@@ -207,7 +207,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * Irish: {{t|ga|ag}}
 * Italian: {{t+|it|a}}
 * Japanese: {{t+|ja|に|tr=...ni|alt=...に|sc=Jpan}}, {{t+|ja|を|tr=...o|alt=...を|sc=Jpan}}
-* Korean: {{t+|ko|에게|tr=...ege|alt=...에게|sc=Kore}}
+* Korean: {{t+|ko|에게|alt=...에게|sc=Kore}}
 * Kurdish:
 *: Kurmanji: {{t+|kmr|li}}
 *: Sorani: ([[le]])
@@ -227,7 +227,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 *: Han kastade sten mot mig = ''He threw stones at (=towards) me''
 *: Han kastade sten på mig = ''He threw stones at me'' (''...and hit me'')
 * Tamil: {{t-needed|ta}}
-* Thai: {{t+|th|ณ|tr=nā|sc=Thai}}
+* Thai: {{t+|th|ณ|sc=Thai}}
 * Tok Pisin: {{t|tpi|long}}
 * Walloon: {{t+|wa|a}}
 {{trans-bottom}}
