--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -163,7 +163,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * Pashto: {{t+|ps|حباب|m|tr=ḥubāb|sc=ps-Arab}}
 * Persian: {{t+|fa|حباب|tr=hobâb|sc=fa-Arab}}, {{t+|fa|غوزه|tr=quze}}, {{t|fa|غنچاب|tr=quncab}}
 * Polish: {{t+|pl|bańka|f}}
-* Portuguese: {{t+|pt|bolha|f}}
+* Portuguese: {{t+|pt|bolha|f}}, {{t+|pt|borbulha|f}}
 * Punjabi: {{t|pa|ਬੁਲਬੁਲਾ|m|tr=bulabulā|sc=Guru}}
 * Romanian: {{t+|ro|balon|n}}, {{t+|ro|bășică|f}}, {{t+|ro|bulă|f}}
 * Romansch: {{t|rm|vaschia|f}}, {{t|rm|scufla|f}}
