--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -115,7 +115,7 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 * Spanish: {{t+|es|entonces}}
 * Swedish: {{t+|sv|då}}
 * Telugu: {{t+|te|అప్పుడు|tr=appuDu}}
-* Thai: {{t|th|ในตอนนั้น|tr=nai dton-nán|sc=Thai}}
+* Thai: {{t|th|ในตอนนั้น|tr=nai dton-nán}}
 * Turkish: {{t+|tr|sonra}}, {{t|tr|o zaman}}
 * Ukrainian: {{t|uk|тоді|tr=todí|sc=Cyrl}}
 * Urdu: {{t|ur|تب|tr=tab|sc=ur-Arab}}
@@ -341,10 +341,10 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 {{trans-top|that time}}
 * Georgian: {{t-needed|ka}}
 * Portuguese: {{t+|pt|então}}
-* Spanish: {{t+check|es|entonces|m}}
+* Spanish: {{t|es|entonces}}
 {{trans-mid}}
 * Swedish: {{t+check|sv|dess}}, {{t+check|sv|då}}
-* Turkish: {{t|tr|o zaman}}
+* Turkish: {{t-check|tr|o zaman}}
 {{trans-bottom}}
 
 {{checktrans-top}}
@@ -355,8 +355,6 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 * Italian: {{t-check|it|allora}}
 * {{ttbc|ko}}: [[그때]] (geuddae)
 * Kurdish: {{t-check|ku|hingê}}
-* Spanish: {{t-check|es|entonces}}
-* Turkish: {{t-check|tr|o zaman}}
 {{trans-bottom}}
 
 ===Conjunction===
