--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -172,13 +172,14 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 *: Sorani: {{t|ckb|فو|sc=ku-Arab}}
 * Kyrgyz: {{t+|ky|сокку}}, {{t+|ky|шамал соккусу}}, {{t+|ky|айдоо}}, {{t|ky|айдап кийирүү}}, {{t|ky|жел чыгаруу}}, {{t+|ky|желаргы сокку}}, {{t+|ky|шамалдуу жел}}, {{t+|ky|желдөө}}, {{t+|ky|шамал үйлөөсү}}, {{t|ky|үйлөө}}, {{t+|ky|желбиретүү}}, {{t+|ky|желпилдетүү}}, {{t+|ky|көбүү}}, {{t+|ky|шишүү}}, {{t+|ky|шишип кетүү}}, {{t+|ky|күшүлдөө}}, {{t+|ky|бышылдоо}}
 * Latgalian: {{t|ltg|pyust}}
-{{trans-mid}}
 * Latin: {{t|la|flo}}, {{t|la|sufflo}}
+{{trans-mid}}
 * Latvian: {{t+|lv|pūst}}
 * Lithuanian: {{t+|lt|pūsti}}
 * Macedonian: {{t|mk|дува}}
 * Malay: {{t|ms|tiup}}, {{t|ms|hembus}}
 * Maori: {{t|mi|ihi}}
+* Mongolian: {{t+|mn|үлээх}}
 * Ngazidja Comorian: {{t|zdj|ra|alt=hura}}
 * North Frisian: {{qualifier|Föhr-Amrum}} {{t|frr|blä}}
 * Old Frisian: {{t|ofs|blā}}
