t+mel:[[bap]] ([[WT:EDIT|Assisted]]) <squirrel#42362622>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -50,6 +50,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Burmese: {{t|my|ရှဉ့်|sc=Mymr}}
 * Catalan: {{t+|ca|esquirol|m}}
 * Central Mazahua: {{t|maz|mijñi}}
+* Central Melanau: {{t|mel|bap}}
 * Chechen: {{t|ce|тарсал}}
 * Cherokee: {{t|chr|ᏌᎳᎵ|tr=salali|sc=Cher}}, {{t|chr|ᏌᎶᎵ|sc=Cher}}
 * Cheyenne: {{t|chy|no'ee'e}}
