--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -306,6 +306,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Finnish: {{t|fi|kytky}}
 {{trans-mid}}
 * French: {{t+|fr|nœud|m}}
+* Occitan: {{t|oc|nos|m}}, {{t|oc|nosèl|m}}
 * Swahili: {{t+|sw|pinda}}
 * Swedish: {{t+|sv|knop}}
 {{trans-bottom}}
