t+oc:[[laç]] ([[WT:EDIT|Assisted]]) <bend#42368033>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -306,7 +306,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Finnish: {{t|fi|kytky}}
 {{trans-mid}}
 * French: {{t+|fr|nœud|m}}
-* Occitan: {{t|oc|nos|m}}, {{t|oc|nosèl|m}}
+* Occitan: {{t|oc|nos|m}}, {{t|oc|nosèl|m}}, {{t|oc|laç|m}}
 * Swahili: {{t+|sw|pinda}}
 * Swedish: {{t+|sv|knop}}
 {{trans-bottom}}
