--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -315,7 +315,7 @@ From {{etyl|enm|en}} {{m|enm|benden}}, from {{etyl|ang|en}} {{m|ang|bendan||to b
 * Bulgarian: {{t|bg|кесонна болест|p}}
 * Finnish: {{t+|fi|sukeltajantauti}}
 {{trans-mid}}
-* French: {{t|fr|accident de décompression|m}}
+* French: {{t|fr|accident de décompression|m}}, {{t|fr|maladie des caissons|f}}
 * Portuguese: {{t+|pt|doença de descompressão|f}}
 * Swahili: {{t+|sw|pinda}}
 {{trans-bottom}}
