t+ga:[[neamh-ailíniú]] ([[WT:EDIT|Assisted]]) <nonalignment#42370507>

--- a/en/n/nonalignment.776139.wikitext
+++ b/en/n/nonalignment.776139.wikitext
@@ -12,7 +12,7 @@
 {{trans-top|state of being nonaligned}}
 * French: {{t+|fr|non-alignement|m}}
 {{trans-mid}}
-* Irish: {{t|ga|neamh-chomhghuaillíocht|f}}
+* Irish: {{t|ga|neamh-chomhghuaillíocht|f}}, {{t|ga|neamh-ailíniú|m}}
 {{trans-bottom}}
 
 [[fa:nonalignment]]
