--- a/en/b/bosom friend.741206.wikitext
+++ b/en/b/bosom friend.741206.wikitext
@@ -4,7 +4,7 @@
 {{en-noun}}
 
 # A very close [[friend]].
-# {{lb|en|slang|euphemistic|obsolete}} A {{rfv-sense}} [[body louse]].
+# {{rfv-sense}} {{lb|en|slang|euphemistic|obsolete}} A [[body louse]].
 
 ====Synonyms====
 * {{sense|very close friend}} {{l|en|bosom buddy}}, {{l|en|cater-cousin}}, {{l|en|intimate}}
