--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -23,6 +23,17 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 # A serving of the above beverage
 # {{lb|en|US|_|standard of identity}} [[neutral spirits#English|Neutral spirits]] distilled (or treated after distillation) so as to have no distinctive character, aroma, taste{{,}} or color
 
+====Derived terms====
+{{der2|lang=en
+|vodka luge
+|vodka tonic
+|vodkaless
+|vodkatini
+|vodkalike
+|caipivodka
+|vodka sauce
+|vodkaholic}}
+
 ====Translations====
 {{trans-top|clear distilled alcoholic liquor}}
 * Afrikaans: {{t|af|wodka}}
