--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -15,6 +15,8 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a {{m|en|
 {{en-noun}}
 
 # A large [[aquatic]] [[rodent]] (''[[Ondatra zibethicus]]'').
+#* '''1865''', Henry David Thoreau, ''Cape Cod'', Chapter IX. "The Sea and the Desert", page 187.
+#*: He also said that minks, '''muskrats''', foxes, coons, and wild mice were found there, but no squirrels.
 # Any of several species of [[shrew]]s in the family [[Soricidae]], especially the Asian house shrew, {{taxlink|Suncus murinus|species|noshow=1}}
 
 ====Derived terms====
