/* Noun */ + quote <squirrel#42403241>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -16,6 +16,8 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 {{en-noun}}
 
 # Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
+#* '''1865''', Henry David Thoreau, ''Cape Cod'', Chapter IX. "The Sea and the Desert", page 187.
+#*: He also said that minks, muskrats, foxes, coons, and wild mice were found there, but no '''squirrels'''.
 # {{lb|en|Scientology|often|disparaging}} A person, usually a [[freezoner]], who applies L. Ron Hubbard's technology in a [[heterodox]] manner.
 # One of the small [[roller]]s of a [[carding]] [[machine]] which work with the large [[cylinder]].
 
