--- a/en/d/diablotin.741371.wikitext
+++ b/en/d/diablotin.741371.wikitext
@@ -4,6 +4,7 @@
 From {{suffix|diable|t1=devil|ot|in|lang=fr}}.
 
 ===Pronunciation===
+* {{fr-IPA}}
 * {{audio|Fr-Paris--diablotin.ogg|Audio (Paris)|lang=fr}}
 
 ===Noun===
