--- a/en/b/bare-butt.741632.wikitext
+++ b/en/b/bare-butt.741632.wikitext
@@ -5,7 +5,7 @@
 * {{l|en|barebutt}}
 
 ===Etymology===
-{{m|en|bare||naked}} + {{m|en|butt||bottom}}.
+{{compound|en|bare|t1=naked|butt|t2=bottom}}.
 
 ===Adjective===
 {{en-adj|-}}
