--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -64,15 +64,6 @@ Alternative (but less likely) etymology derives ''yeah'' from a drawling pronunc
 * Welsh: {{t|cy|iah}}
 {{trans-bottom}}
 
-{{trans-top|expressing joy}}
-* Finnish: {{t+|fi|joo}}
-* French: {{t+|fr|ouais}}
-* Italian: {{t+|it|sì}}, {{t+|it|vai}}, {{t+|it|evvai}}, {{t|it|evviva}}
-{{trans-mid}}
-* Portuguese: {{t+|pt|é!}}, {{t|pt|isso aí!}}
-* Russian: {{t+|ru|да!}}, {{t+|ru|ура́!}}, {{t|ru|э-ге́й!}}
-{{trans-bottom}}
-
 ===References===
 <references/>
 
@@ -88,10 +79,13 @@ Alternative (but less likely) etymology derives ''yeah'' from a drawling pronunc
 ====Translations====
 {{trans-top|expressing joy}}
 * Dutch: {{t+|nl|euh}}
-* Finnish: {{t+|fi|jee}}
+* Finnish: {{t+|fi|jee}}, {{t+|fi|joo}}
+* French: {{t+|fr|ouais}}
 {{trans-mid}}
-* Italian: {{t+|it|sì}}, {{t+|it|vai}}
+* Italian: {{t+|it|sì}}, {{t+|it|vai}}, {{t+|it|evvai}}, {{t|it|evviva}}
 * Japanese: {{t|ja|やった}} (yatta)
+* Portuguese: {{t+|pt|é!}}, {{t|pt|isso aí!}}
+* Russian: {{t+|ru|да!}}, {{t+|ru|ура́!}}, {{t|ru|э-ге́й!}}
 {{trans-bottom}}
 
 ===See also===
