--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -255,7 +255,7 @@ The suffix has been used since around the 17th and 18th century. It is most like
 {{vi-pronoun}}
 
 # {{lb|vi|archaic|by males|or|dialectal}} [[I]]; [[me]]
-#:{{ux|vi|Hôm qua '''qua''' bảo '''qua''' qua mà '''qua''' không qua.|Yesterday ah said ah'd cuhm over but ah ain't cuhm.}}
+#:{{ux|vi|Hôm qua '''qua''' bảo '''qua''' qua mà '''qua''' không qua. Hôm nay '''qua''' không bảo '''qua''' qua mà '''qua''' lại qua.|Yesterday ah said ah'd cuhm over but ah ain't cuhm. Today ah ain't say ah'd cuhm over but ah came.}}
 
 [[az:qua]]
 [[ca:qua]]
