--- a/en/h/hamel.855583.wikitext
+++ b/en/h/hamel.855583.wikitext
@@ -1,7 +1,9 @@
 ==Dutch==
 
 ===Pronunciation===
+* {{IPA|lang=nl|/ˈɦaː.məl/}}
 * {{audio|nl-hamel.ogg|hamel|lang=nl}}
+* {{hyphenation|lang=nl|ha|mel}}
 
 ===Etymology===
 Likely a noun formed from an adjective meaning "maimed". Likely related to Dutch {{m|nl|ham||bacon}}.
