--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -138,7 +138,7 @@ Earlier {{m|en|seise}}, from {{etyl|enm|en}} {{m|enm|seisen}}, {{m|enm|sesen}}, 
 {{cardinalbox|fr|15|16|17|quinze|dix-sept|ord=seizième|wplink=Seize}}
 
 ===Etymology===
-From {{etyl|la|fr}} {{m|la|sēdecim}}.
+From {{inh|fr|frm|seze}}, from {{inh|fr|fro|seize}}, from {{inh|fr|la|sēdecim}}.
 
 ===Pronunciation===
 * {{audio|Fr-seize.ogg|audio (France)|lang=fr}}
@@ -153,6 +153,10 @@ From {{etyl|la|fr}} {{m|la|sēdecim}}.
 
 ====Derived terms====
 * {{l|fr|seizième}}
+
+====Related terms====
+* {{l|fr|six}}
+* {{l|fr|dix}}
 
 ===External links===
 * {{R:TLFi}}
