--- a/en/c/Christmas pudding.856125.wikitext
+++ b/en/c/Christmas pudding.856125.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
 # A rich [[dessert]] traditionally eaten at [[Christmas]], made from [[dried]] [[fruit]] and nuts.
 
