--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -28,10 +28,11 @@ From earlier {{m|en|gamel}}, from {{inh|en|enm|*gamlen}}, {{m|enm|*gamelen}}, va
 * French: {{t+|fr|pari|m}}, {{t+|fr|jeu de hasard|m}}
 * German: {{t+|de|Glücksspiel|n}}, {{t|de|Hazardspiel|n}}
 * Greek: {{t+|el|στοίχημα|n}}
-{{trans-mid}}
 * Italian: {{t+|it|scommessa|f}}
 * Japanese: {{t|ja|賭け|tr=かけ, kake|sc=Jpan}}, {{t|ja|ギャンブル|tr=gyanburu|sc=Jpan}}
+{{trans-mid}}
 * Macedonian: {{t|mk|коцка|f|tr=kócka}}, {{t|mk|комар|m|tr=kómar}}
+* Malay: {{t|ms|taruhan}}
 * Persian: {{t+|fa|قمار|tr=ghomâr|sc=fa-Arab}}
 * Polish: {{t+|pl|hazard|m}}
 * Portuguese: {{t+|pt|aposta|f}}
