--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -67,7 +67,7 @@ Abbreviation of various terms and phrases.
 * Burmese: {{t|my|စီဒီ}}
 * Chinese:
 *: Cantonese: {{t|yue|CD|tr=si1 di1|sc=Hani}}
-*: Mandarin: {{t+|cmn|CD|tr=xīdì|sc=Hani}}{{t+|cmn|光盤|sc=Hani}}, {{t+|cmn|光盘|tr=guāngpán|sc=Hani}}, {{t+|cmn|光碟|tr=guāngdié|sc=Hani}}
+*: Mandarin: {{t+|cmn|CD|tr=xīdì|sc=Hani}}, {{t+|cmn|光盤|sc=Hani}}, {{t+|cmn|光盘|tr=guāngpán|sc=Hani}}, {{t+|cmn|光碟|tr=guāngdié|sc=Hani}}
 * Dutch: {{t+|nl|cd|m}} (lower case)
 * Esperanto: {{t|eo|KD}}
 * Finnish: {{t+|fi|CD}}
@@ -85,7 +85,7 @@ Abbreviation of various terms and phrases.
 * Portuguese: {{t+|pt|CD|m}}
 * Russian: {{t+|ru|CD|m}}, {{t|ru|си-ди́|m}}
 * Swedish: {{t+|sv|CD|c}}
-* Thai: {{t|th|ซีดี|tr=see dee}}
+* Thai: {{t|th|ซีดี}}
 * Urdu: {{t|ur|سی ڈی|tr=sīḍī|sc=ur-Arab}}
 * Vietnamese: {{t-needed|vi}}
 {{trans-bottom}}
