--- a/en/n/nebbiolo.745861.wikitext
+++ b/en/n/nebbiolo.745861.wikitext
@@ -1,3 +1,12 @@
+==English==
+
+===Noun===
+{{en-noun|?}}
+
+# An Italian [[red wine]] [[grape]] [[variety]]
+
+----
+
 ==Italian==
 {{was fwotd|2013|November|10|lang=it}}
 [[File:Close up of Nebbiolo cluster in Italy.jpg|thumb|'''Nebbiolo''' (uva).]]
