--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -67,6 +67,8 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 =====Hyponyms=====
 * {{sense|mammal of genus Sus}} {{l|en|boar}}, {{l|en|herd boar}}; [[sow]], [[brood sow]]; [[piglet]], [[piggy]]
 
+[[Category:en:People]]
+
 =====Derived terms=====
 {{rel-top|terms derived from the noun "pig"}}
 * {{l|en|blind pig}}
