--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -1,7 +1,8 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/bɪˈɡæn/|lang=en}}
+* {{a|RP|UK}} {{IPA|/bɪˈɡæn/|lang=en}}
+* {{a|GA|US}} {{IPA|/bɪˈɡæn/|lang=en}}
 * {{audio|en-us-began.ogg|Audio (US)|lang=en}}
 * {{rhymes|æn|lang=en}}
 * {{hyphenation|be|gan|lang=en}}
