--- a/en/g/gramas.855023.wikitext
+++ b/en/g/gramas.855023.wikitext
@@ -23,7 +23,14 @@
 
 ====Related terms====
 {{qualifier|Noun}}
+* {{l|lt|centigramas|g=m}}
+* {{l|lt|decigramas|g=m}}
+* {{l|lt|dekagramas|g=m}}
+* {{l|lt|hektogramas|g=m}}
 * {{l|lt|kilogramas|g=m}}
+* {{l|lt|milligramas|g=m}}
+
+[[Category:lt:Units of measure]]
 
 ----
 
