--- a/en/m/Mother's Night.741880.wikitext
+++ b/en/m/Mother's Night.741880.wikitext
@@ -4,7 +4,7 @@
 A calque, or perhaps a continuation, of {{etyl|ang|en}} {{m|ang|Mōdraniht}}.
 
 ===Proper noun===
-{{en-proper noun}}
+{{en-proper noun|head=[[mother|Mother]]'s [[night|Night]]}}
 
 # A [[Anglo-Saxon]] midwinter feast recorded by [[w:Bede|Bede]], or a modern version of this festival celebrated by some [[Heathen]]s.
 #* '''2005''', Galina Krasskova, ''Exploring the Northern Tradition'' (Career Press Inc., ISBN 1-56414-791-6), page 181:
