--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -165,6 +165,7 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 * {{l|en|torte}}
 
 [[Category:en:Mustelids]]
+[[Category:en:People]]
 
 ----
 
