/* Old English */ <bled#42451717>

--- a/en/b/bled.6802.wikitext
+++ b/en/b/bled.6802.wikitext
@@ -54,6 +54,9 @@ From {{etyl|arq|fr}}, from {{etyl|ar|fr}} {{m|ar|بِلَاد}}
 ===Etymology===
 Derivative of {{m|ang|blōwan||to bloom, blossom}}.
 
+===Pronunciation===
+* {{IPA|/ˈbleːd/|lang=ang}}
+
 ===Noun===
 {{ang-noun|head=blēd|f}}
 
