--- a/en/p/palet.803129.wikitext
+++ b/en/p/palet.803129.wikitext
@@ -8,6 +8,8 @@
 
 # {{lb|en|heraldiccharge}} A [[perpendicular]] [[band]] upon an [[escutcheon]], one half the [[breadth]] of the [[pale]].
 
+===Anagrams===
+* {{l|en|plate}}
 ----
 
 ==Fiji Hindi==
