t+hy:[[լազերեն]] t+hy:[[ճաներեն]] ([[WT:EDIT|Assisted]]) <Laz#42453818>

--- a/en/l/Laz.774545.wikitext
+++ b/en/l/Laz.774545.wikitext
@@ -9,6 +9,7 @@
 
 ====Translations====
 {{trans-top|language}}
+* Armenian: {{t+|hy|լազերեն}}, {{t+|hy|ճաներեն}}
 * Georgian: {{t|ka|ლაზური}}
 * Laz: {{t|lzz|ლაზური ნენა}}
 {{trans-mid}}
