--- a/en/p/PVC.4323.wikitext
+++ b/en/p/PVC.4323.wikitext
@@ -1,9 +1,8 @@
 ==English==
 {{wikipedia|PVC (disambiguation)}}
 
-===Initialism===
-{{rfc-header|Initialism}}
-{{head|en|initialism}}
+===Noun===
+{{en-noun|-}}
 
 # {{lb|en|organic compound}} [[polyvinyl chloride|'''p'''oly'''v'''inyl '''c'''hloride]]
 # {{lb|en|medicine}} [[premature ventricular contraction|'''p'''remature '''v'''entricular '''c'''ontraction]] of the heart
