/* Translations */ <executive order#42478823>

--- a/en/e/executive order.776982.wikitext
+++ b/en/e/executive order.776982.wikitext
@@ -11,6 +11,7 @@
 * Chinese:
 *: Cantonese: {{t-needed|yue}}
 *: Mandarin: {{t+|cmn|行政命令|tr=xíngzhèng mìnglìng}}
+* Finnish: {{t+|fi|asetus}} (''closest equivalent'')
 {{trans-mid}}
 * Japanese: {{t|ja|大統領令|tr=daitōryōrei}}
 * Korean: {{t-needed|ko}}
