--- a/en/w/WTO.26234.wikitext
+++ b/en/w/WTO.26234.wikitext
@@ -11,7 +11,7 @@
 * Armenian: {{t|hy|ԱՀԿ}}
 * Chinese:
 *: Mandarin: {{t|cmn|WTO}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t+|fi|WTO}}
 {{trans-mid}}
 * French: {{t+|fr|OMC|f}}
 * Italian: {{t|it|OMC}}
