--- a/en/c/convocate.776403.wikitext
+++ b/en/c/convocate.776403.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|la|en}} {{lena}} {{m|la|convocatus}}, past participle of {{m|la|convocare}} to convocate.
+{{etyl|la|en}} {{lena}} {{m|la|convocatus}}, past participle of {{m|la|convocare||to convocate}}.
 
 ===Verb===
 {{en-verb|convocat}}
