--- a/en/a/a number of.776983.wikitext
+++ b/en/a/a number of.776983.wikitext
@@ -12,5 +12,15 @@
 ====Usage notes====
 * This a leading example of the structure of a [[partitive]] construction. Other words that behave the same way as ''number'' does are ''dozen'', ''[[quantity]]'', ''score'', ''hundred'', ''army'', ''[[lakh]]'', ''mob'', ''lot'', ''[[plethora]]'', ''[[myriad]]'', ''[[herd]]''.
 
+====Translations====
+{{trans-top|several}}
+{{trans-mid}}
+* Russian: {{t+|ru|ряд|m}}, {{t+|ru|не́сколько}}
+{{trans-bottom}}
+{{trans-top|several of}}
+{{trans-mid}}
+* Russian: {{t+|ru|ряд|m}}, {{t+|ru|не́сколько}}
+{{trans-bottom}}
+
 [[ru:a number of]]
 [[zh:a number of]]
