--- a/en/a/aziridine.742293.wikitext
+++ b/en/a/aziridine.742293.wikitext
@@ -2,7 +2,7 @@
 [[Image:Aziridine3d.png|thumb|3D structure of '''aziridine''']]
 
 ===Etymology===
-[[aza-]] + [[-iridine]]. [[aza|Aza]] denotes a [[monocycle]] with a single nitrogen atom, and [[iridine]] is used to mark a three-membered monocycle.
+{{prefix|en|aza|iridine}}. [[aza|Aza]] denotes a [[monocycle]] with a single nitrogen atom, and [[iridine]] is used to mark a three-membered monocycle.
 
 ===Pronunciation===
 * {{IPA|əˈziɹɪdin|lang=en}}
