/* Derived terms */ <mill#42492876>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -66,6 +66,7 @@ From {{etyl|enm|en}} {{m|enm|mille}}, {{etyl|ang|en}} {{m|ang|mylen}}, from {{et
 |[[mill race]], [[millrace]]
 |[[millstone]]
 |[[mill wheel]], [[millwheel]]
+|[[New Mills]]
 |[[paper mill]]
 |[[pecker mill]]
 |[[pulp mill]]
