--- a/en/w/WTO.26234.wikitext
+++ b/en/w/WTO.26234.wikitext
@@ -29,9 +29,10 @@
 ----
 
 ==Chinese==
+{{rfv|lang=zh}}
 
 ===Etymology===
-From {{etyl|en|zh}} {{m|en|WTO}}, {{initialism of|World Trade Organization|cap=i|nocat=1|lang=zh}}
+{{bor|zh|en|WTO}}, initialism of {{m|en|World Trade Organization}}.
 
 ===Pronunciation===
 * The abbreviation is pronounced emulating English, although the sounds and sound combination don't exist in Chinese. The individual pronunciation may vary dependent on the speaker's ability to pronounce words in English. <!-- based on discussion with educated Chinese speakers and personal experience, User:Atitarev -->
