/* Proper noun */ <WTO#42501671>

--- a/en/w/WTO.26234.wikitext
+++ b/en/w/WTO.26234.wikitext
@@ -44,6 +44,9 @@
 #* {{zh-x|而 自從 中國 加入 WTO 後，相信 未來 關稅 有 機會{wui6} 降 至 零。|and since China joined the '''WTO''', customs duty may drop to zero in the future.|C-LIT|ref='''2010''' June 21, {{lang|zh|邱婷}}, {{lang|zh|王朝酒業新疆「圈地」種葡萄}}, in {{w2|zh|文匯報 (香港)|文匯報}} (''{{w|Wen Wei Po}}'')}}
 #* {{zh-x|阿茲維多 表示，WTO 提供 解決 很多 貿易 問題 的 工具，他 有 信心 其他 WTO 成員 想 要 找出 一 條 未來 的 道路。|Azevedo indicates that the WTO provides tools for solving many problems in trade, and that he is sure that other '''WTO''' members want to find a road for the future.|ref='''2017''' February 23, {{lang|zh|盧永山}}, [http://news.ltn.com.tw/news/business/breakingnews/1984772 {{lang|zh|川普貿易政策引憂慮？ WTO秘書長：有辦法處裡}}], in {{w2|zh|自由時報}} (''{{w|Liberty Times}}'')}}
 
+====Synonyms====
+* {{zh-l|世貿}}
+
 [[Category:Chinese terms written in foreign scripts]]
 
 [[zh-min-nan:WTO]]
