Reverted edits by [[Special:Contributions/2601:345:4203:4A80:8463:555E:F3AC:993D|2601:345:4203:4A80:8463:555E:F3AC:993D]]. If you think this rollback is in error, please leave a message on my talk page. <maximum#42510821>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -184,7 +184,8 @@ Via {{etyl|fr|en}} from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 ====Derived terms====
 * {{l|fr|maximal}}
 
-Z71
+===External links===
+* {{R:TLFi}}
 
 ----
 
