--- a/en/m/musclebrain.746557.wikitext
+++ b/en/m/musclebrain.746557.wikitext
@@ -14,3 +14,4 @@
 * {{sense|idiot}} {{l|en|bruiser}}, {{l|en|dumbbell}}, {{l|en|moron}}, {{l|en|buffoon}}, {{l|en|dimwit}}, {{l|en|pinhead}}, {{l|en|meathead}}, {{l|en|birdbrain}}, {{l|en|peabrain}}, {{l|en|goon}}, {{l|en|dummy}}, {{l|en|dipstick}}, {{l|en|idiot}}
 
 [[Category:en:Sports]]
+[[Category:en:People]]
