--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -81,6 +81,7 @@
 *: Cantonese: {{t|yue|美國英語|tr=mei gwok jīng jyu|sc=Hani}}
 *: Mandarin: {{t+|cmn|美國英語|sc=Hani}}, {{t+|cmn|美国英语|tr=Měiguó Yīngyǔ|sc=Hani}}, {{t|cmn|美式英語|sc=Hani}}, {{t|cmn|美式英语|tr=Měishì Yīngyǔ|sc=Hani}}
 * Czech: {{t|cs|americká angličtina|f}}
+* Danish: {{t|da|amerikansk engelsk}}
 * Dutch: {{t|nl|Amerikaans-Engels}}
 * Estonian: {{t|et|Ameerika inglise keel}}
 * Finnish: {{t+|fi|amerikanenglanti}}
