--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -61,7 +61,7 @@ From {{etyl|fro|en}} {{m|fro|consumer}}, from {{etyl|la|en}} {{m|la|consumere}}.
 {{trans-mid}}
 * Irish: {{t|ga|caith}}
 * Italian: {{t+|it|consumare}}
-* Maori: {{t|mi|whakapeto}}, {{t|mi|none}}
+* Maori: {{t|mi|whakapeto}}, {{t|mi|none}}, {{t|mi|whakahemo}}
 * Norwegian: {{t|no|forbruke}}, {{t|no|bruke opp}}
 * Persian: {{t+|fa|مصرف کردن|sc=fa-Arab}}
 * Portuguese: {{t+|pt|consumir}}
