/* Translations */ Danish <bleed#42523873>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -165,6 +165,7 @@ From {{inh|en|enm|bleden}}, from {{inh|en|ang|blēdan||to bleed}}, from {{inh|en
 
 ====Translations====
 {{trans-top|incident of bleeding}}
+* Danish: {{t|da|blødning|c}}
 * Dutch: {{t+|nl|bloeding}}
 * German: {{t+|de|Blutung}}
 {{trans-mid}}
