--- a/en/w/w/o.26235.wikitext
+++ b/en/w/w/o.26235.wikitext
@@ -8,7 +8,7 @@
 # [[with]] [[out]]; [[without]]
 # {{lb|en|finance|insurance}} [[write]] [[off]]; [[write-off]]
 # Wife of (E.g. Sandy Steven, W/o Steven)
-# {{lb|en|tennis}} [[walkover]]
+# {{lb|en|sport}} [[walkover]]
 # {{lb|en|scheduling}} week of (E.g. w/o Jan 7th, week of Jan 7th)
 
 ====Related terms====
