Wrapping quote in template. <then#42534580>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -50,8 +50,7 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 #* '''1485''', Sir {{w|Thomas Malory}}, ''{{w|Le Morte d'Arthur}}'', Book I.23, reprinted 1817, Sir Thomas Malory, {{w|William Caxton}}, ''Morte d'Arthur: The Byrth, Lyf, and Actes of Kyng Arthur'', Volume 1, [http://books.google.com.au/books?id=eaUKAAAAYAAJ&pg=PA37&dq=%22the+knyght+sawe+hym+lye+soo+on+the+ground%22&hl=en&sa=X&ei=rAgPT5-YI8O5iAeAobDgCQ&redir_esc=y#v=onepage&q=%22the%20knyght%20sawe%20hym%20lye%20soo%20on%20the%20ground%22&f=false page 37]:
 #*: '''Than''' the knyght sawe hym lye soo on the ground, he alyght and was passynge heuy, for he wende he had slayne hym{{nb...}}.
 # {{lb|en|UK|dialect|affirmation}} Used to contradict an assertion.
-#* '''2001''', {{w|Eric Malpass}}, ''At the Height of the Moon'', [http://books.google.com.au/books?id=cClq1igzauQC&pg=PA28&dq=%22She+says+Indian+elephants+are+tidgy+little+things%22&hl=en&sa=X&ei=9gsPT9qlMYeaiQf4kdwu&ved=0CDIQ6AEwAA#v=onepage&q=%22She%20says%20Indian%20elephants%20are%20tidgy%20little%20things%22&f=false page 28],
-#*: ‘She says Indian elephants are tidgy little things.’ ¶ ‘They′re not '''then'''.’ Emma was getting heated. ‘They′re –’ ¶ ‘Emma!’ said Jenny sharply. The child subsided.
+#* {{quote-text|year=2001|author={{w|Eric Malpass}}|title=At the Height of the Moon|page=28|url=http://books.google.com.au/books?id=cClq1igzauQC&pg=PA28&dq=%22She+says+Indian+elephants+are+tidgy+little+things%22&hl=en&sa=X&ei=9gsPT9qlMYeaiQf4kdwu&ved=0CDIQ6AEwAA#v=onepage&q=%22She%20says%20Indian%20elephants%20are%20tidgy%20little%20things%22&f=false|passage=‘She says Indian elephants are tidgy little things.’ ¶ ‘They′re not '''then'''.’ Emma was getting heated. ‘They′re –’ ¶ ‘Emma!’ said Jenny sharply. The child subsided.}}
 
 ====Synonyms====
 * {{sense|soon afterward}} {{l|en|and then}}, {{l|en|and so}}, {{l|en|subsequently}}, {{l|en|so}}
