Wrapping quote in template. <theory#42534594>

--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -30,15 +30,12 @@ From {{etyl|frm|en}} {{m|frm|théorie}}, from {{etyl|LL.|en}} {{m|la|theōria}},
 |url=http://www.americanscientist.org/bookshelf/pub/tackling-infinity
 |passage=Some of the most beautiful and thus appealing physical '''theories''', including quantum electrodynamics and quantum gravity, have been dogged for decades by infinities that erupt when theorists try to prod their calculations into new domains. Getting rid of these nagging infinities has probably occupied far more effort than was spent in originating the '''theories'''.}}
 # {{lb|en|uncountable}} The underlying [[principle]]s or [[method]]s of a given technical skill, [[art]] etc., as opposed to its [[practice]]. {{defdate|from 17th c.}}
-#* '''1990''', Tony Bennett, ''Outside Literature'', p. 139:
-#*: Does this mean, then, that there can be no such thing as a '''theory''' of literature?
-#* '''1998''', Elizabeth Souritz, ''The Great History of Russian Ballet'':
-#*: Lopukhov wrote a number of books and articles on ballet '''theory''', as well as his memoirs.
+#* {{quote-text|year=1990|author=Tony Bennett|title=Outside Literature|page=139|passage=Does this mean, then, that there can be no such thing as a '''theory''' of literature?}}
+#* {{quote-text|year=1998|author=Elizabeth Souritz|title=The Great History of Russian Ballet|passage=Lopukhov wrote a number of books and articles on ballet '''theory''', as well as his memoirs.}}
 # {{lb|en|mathematics}} A [[field]] of [[study]] attempting to [[exhaustive]]ly [[describe]] a particular [[class]] of [[construct]]s. {{defdate|from 18th c.}}
 #: ''Knot '''theory''' classifies the mappings of a circle into 3-space.''
 # A [[hypothesis]] or [[conjecture]]. {{defdate|from 18th c.}}
-#* '''1999''', Wes DeMott, ''Vapors'':
-#*: It's just a '''theory''' I have, and I wonder if women would agree. But don't men say a lot about themselves when a short-skirted woman slides out of a car or chair?
+#* {{quote-text|year=1999|author=Wes DeMott|title=Vapors|passage=It's just a '''theory''' I have, and I wonder if women would agree. But don't men say a lot about themselves when a short-skirted woman slides out of a car or chair?}}
 #* '''2003''', Sean Coughlan, ''The Guardian'', 21 Jun 2003:
 #*: The '''theory''' is that by stripping costs to the bone, they are able to offer ludicrously low fares.
 # {{lb|en|countable|logic}} A [[set]] of [[axiom]]s together with all [[statement]]s [[derivable]] from them. ''Equivalently,'' a [[formal language]] plus a set of [[axiom]]s (from which can then be derived [[theorem]]s).
