--- a/en/v/Valpolicella.745851.wikitext
+++ b/en/v/Valpolicella.745851.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 
 # A dry [[red wine]] made in the region of [[Verona]], [[Italy]], from various local grape varieties and consequently of variable quality.
 
