--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -316,11 +316,11 @@ From {{m|en|mill|pos=noun}}.
 {{en-verb}}
 
 # {{lb|en|transitive}} To [[grind]] or otherwise process in a mill or other machine.
-#: {{ux|en|to mill flour}}
+#: {{ux|en|to '''mill''' flour}}
 # {{lb|en|transitive}} To [[shape]], [[polish]], [[dress]] or [[finish]] using a machine.
 # {{lb|en|transitive}} To [[engrave]] one or more [[groove]]s or a pattern around the edge of (a [[cylindrical]] object such as a coin).
 # {{lb|en|intransitive|followed by|_|[[around]], [[about]], etc.}} To move about in an [[aimless]] fashion.
-#: {{ux|en|I didn't have much to do, so I just '''milled around''' the town looking at the shops.}}
+#: {{ux|en|I didn't have much to do, so I just '''milled''' around the town looking at the shops.}}
 #* {{w|Rudyard Kipling}}
 #*: The deer and the pig and the nilghai were '''milling''' round and round in a circle of eight or ten miles radius, while the Eaters of Flesh skirmished round its edge.
 # {{lb|en|transitive}} To cause to mill, or circle around.
