--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -45,7 +45,7 @@ Used with the definite article {{m|en|the}}.
 * Chinese:
 *: Mandarin: {{t+|cmn|巴爾幹|sc=Hani}}, {{t+|cmn|巴尔干|tr=Bā'ěrgàn|sc=Hani}}, {{t+|cmn|巴爾幹半島|sc=Hani}}, {{t+|cmn|巴尔干半岛|tr=Bā'ěrgàn bàndǎo|sc=Hani}}
 * Czech: {{t+|cs|Balkán|m}}
-* Danish: {{t|da|Balkanhalvøen}}
+* Danish: {{t|da|Balkan}}
 * Esperanto: {{t|eo|Balkanio}}
 * Finnish: {{t+|fi|Balkan}}
 * French: {{t+|fr|Balkans|m}}
