--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -4,8 +4,7 @@
 {{en-noun}}
 
 # An [[alternative]] or [[extrinsic]] [[reason]] for doing something, especially when concealed or when differing from the [[stated]] or [[apparent]] reason.
-#* '''1895''', [[w:Arthur_Conan_Doyle|Sir Arthur Conan Doyle]], ''The Stark Munro Letters'', ch. 9,
-#*: There lurks no bribe in the smell and beauty of the flower. Its charm has no '''ulterior motive'''.
+#* {{quote-text|year=1895|author=[[w:Arthur_Conan_Doyle|Sir Arthur Conan Doyle]]|title=The Stark Munro Letters|chapter=9|passage=There lurks no bribe in the smell and beauty of the flower. Its charm has no '''ulterior motive'''.}}
 #* '''1941''', "[http://www.time.com/time/magazine/article/0,9171,849702,00.html Poetry]," ''Time'', 8 Dec.,
 #*: The poet is a man without a profit or any other kind of '''ulterior motive'''.
 #* {{quote-book
