--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -4,7 +4,7 @@
 * {{l|en|rub salt in someone's wounds}}, {{l|en|rub salt into the wounds}}
 
 ===Etymology===
-Derived from the stinging sensation of salt deliberately being rubbed into an open, bleeding wound; as for torture, interrogation, etc.
+Derived from the stinging sensation of salt deliberately being rubbed into an open, bleeding wound; as a use for torture.
 
 ===Verb===
 {{head|en|verb|head=[[rub]] [[salt in the wound]]}}
