--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -16,12 +16,9 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 #: ''Wanna play on my '''Nintendo''' after school?''
 #* '''1995''', David Gladstone, ed., ''British Social Welfare: Past, Present, and Future'', page 274:
 #*: There is nothing wrong with the accoutrements of personal affluence, but if the numbers of personal stereos, '''Nintendos''', mobile phones and cars grow […].
-#* '''2005''', Lila Abu-Lughod, ''Dramas of Nationhood: The Politics of Television in Egypt'', page 280:
-#*: These professionals are the sort whose children play with '''Nintendos''' and own bikes
-#* '''2005''', Larry L. Meyer, ''No Paltry Thing: Memoirs Of A Geezer Dad'', page 128:
-#*: Franz: “How do elves make '''Nintendos'''?” Dad: “You ask all the hard questions, don't you? I really don't know.”
-#* '''2007''', Ilene Schneider, ''Chanukah Guilt'', page 106:
-#*: The only message at home was from my nephew, letting me know my mother was back home, safe and sound, except for a sore "'''Nintendo''' thumb".
+#* {{quote-text|year=2005|author=Lila Abu-Lughod|title=Dramas of Nationhood: The Politics of Television in Egypt|page=280|passage=These professionals are the sort whose children play with '''Nintendos''' and own bikes}}
+#* {{quote-text|year=2005|author=Larry L. Meyer|title=No Paltry Thing: Memoirs Of A Geezer Dad|page=128|passage=Franz: “How do elves make '''Nintendos'''?” Dad: “You ask all the hard questions, don't you? I really don't know.”}}
+#* {{quote-text|year=2007|author=Ilene Schneider|title=Chanukah Guilt|page=106|passage=The only message at home was from my nephew, letting me know my mother was back home, safe and sound, except for a sore "'''Nintendo''' thumb".}}
 #* '''2007''', Anthony Ham and Alison Bing, ''Morocco'', Lonely Planet, ISBN 1740599748, page 34:
 #*: He was far more interested in bullfighting, which was the '''Nintendo''' of the day, only considerably more dangerous<!--;-->
 
