--- a/en/m/monition.720241.wikitext
+++ b/en/m/monition.720241.wikitext
@@ -28,6 +28,7 @@ From {{etyl|xno|en}} {{m|fro|monicion}}, {{etyl|frm|en}} {{m|frm|monicion}}, and
 * {{l|en|admonishment}}
 * {{l|en|admonition}}
 * {{l|en|commonition}}
+* {{l|en|foremonish}}
 * {{l|en|permonish}}
 * {{l|en|premonish}}
 * {{l|en|premonishment}}
