--- a/en/x/X factor.802821.wikitext
+++ b/en/x/X factor.802821.wikitext
@@ -10,12 +10,9 @@
 {{en-noun}}
 
 # {{lb|en|idiomatic}} An unknown or hard-to-define influence; a [[factor]] with unknown or unforeseeable consequences.
-#* '''1992''', Lia Matera, ''Prior Convictions'', page 121
-#*: We slid into our office, past two women discussing the "'''X factor'''," an apparently undefined quality their firm felt they lacked.
-#* '''1999''', Joel R. DeLuca, ''Political Savvy: Systematic Approaches to Leadership Behind the Scenes'', page 75
-#*: The map can be misleading. It can appear to contain all the relevant information, but in real life, there is always an '''X factor'''.
-#* '''2007''', Tasmina Perry, ''Daddy's Girls'', page 12
-#*: And put him on an LA film set and he glowed with that indefinable '''X-factor''' that agents the world over wished they could bottle.
+#* {{quote-text|year=1992|author=Lia Matera|title=Prior Convictions|page=121|passage=We slid into our office, past two women discussing the "'''X factor'''," an apparently undefined quality their firm felt they lacked.}}
+#* {{quote-text|year=1999|author=Joel R. DeLuca|title=Political Savvy: Systematic Approaches to Leadership Behind the Scenes|page=75|passage=The map can be misleading. It can appear to contain all the relevant information, but in real life, there is always an '''X factor'''.}}
+#* {{quote-text|year=2007|author=Tasmina Perry|title=Daddy's Girls|page=12|passage=And put him on an LA film set and he glowed with that indefinable '''X-factor''' that agents the world over wished they could bottle.}}
 # {{lb|en|idiomatic}} A special talent, ability or quality.
 # [[prothrombinase|Prothrombinase]], also called [[factor X]].
 # {{lb|en|astrophysics}} The [[proportionality]] [[constant]] which converts CO emission line brightness to molecular hydrogen mass.
