--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -159,7 +159,7 @@ Origin uncertain. Apparently representing {{etyl|ang|en}} {{m|ang||beonet-}} (at
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
 [[Category:en:LGBT]]
-[[Category:en:Poeae tribe plants]]
+[[Category:en:Poeae tribe grasses]]
 
 ----
 
