--- a/en/p/Panchen Lama.741373.wikitext
+++ b/en/p/Panchen Lama.741373.wikitext
@@ -5,7 +5,7 @@
 {{etyl|bo|en}} {{m|bo|sc=Tibt|པན་ཆེན་བླ་མ|tr=Pan-chen Bla-ma}}. From {{cog|sa|पण्डित|sc=Deva|tr=paṇḍita||scholar}} + {{cog|bo|ཆེན་པོ|sc=Tibt|tr=chenpo||big}} + {{cog|bo|sc=Tibt|བླ་མ|tr=bla-ma}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|head=Panchen Lama}}
 
 # {{lb|en|Tibetan Buddhism}} The second-highest ranking [[lama]] of the [[Gelug]] sect of Tibetan Buddhism, after the [[Dalai Lama]].
 
