--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -19,7 +19,7 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 # A man of a higher [[rank]] or [[position]].
 # A [[respectful]] [[term]] of [[address]] to a [[man]] of [[higher]] [[rank]] or [[position]], ''[[particularly]]'':
 ## to a [[knight]] or [[other]] [[low]] [[member]] of the [[peerage]].
-## {{ux|en|Just be careful. He gets whingy now if you don't address him as '''Sir''' John.}}
+##: {{ux|en|Just be careful. He gets whingy now if you don't address him as '''Sir''' John.}}
 ## to a [[superior]] [[military]] [[officer]].
 ##: {{ux|en|'''Sir''', yes sir.}}
 ## to a [[teacher]].
