--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -18,6 +18,8 @@ From {{inh|en|enm|sir}}, a {{bor|en|fro|sire||master, sir, lord|nocap=1}}, from 
 
 # A man of a higher [[rank]] or [[position]].
 # A [[respectful]] [[term]] of [[address]] to a [[man]] of [[higher]] [[rank]] or [[position]], ''[[particularly]]'':
+#* '''1991''' May 12, [[w:List of Jeeves and Wooster episodes|"Kidnapped!"]] [[w:Jeeves and Wooster|''Jeeves and Wooster'']], Series 2, Episode 5:
+#*: ''Jeeves:'' Foreign travel often liberates emotions best kept in check, '''sir'''. The air of North America is notoriously stimulating in this regard, as witness the regrettable behavior of its inhabitants in 1776.<br>''B. Wooster:'' Hm? What happened in 1776, Jeeves?<br>''Jeeves:'' I prefer not to dwell on it, if it's convenient to you, '''sir'''. 
 ## to a [[knight]] or [[other]] [[low]] [[member]] of the [[peerage]].
 ##: {{ux|en|Just be careful. He gets whingy now if you don't address him as '''Sir''' John.}}
 ## to a [[superior]] [[military]] [[officer]].
