Wrapping quote in template. <bare-bum#42571836>

--- a/en/b/bare-bum.741634.wikitext
+++ b/en/b/bare-bum.741634.wikitext
@@ -16,8 +16,7 @@
 #*: "Of course I do, Gran! Julian is always walking around '''bare-bum'''. I know all about boys and girls. And love and babies and all."
 #* '''1992''', Martie Sterling, "[http://books.google.com/books?id=akLBQQoiPnQC&pg=PA84&dq=%22bare-bum My Last, Last Run]", ''Ski'', April 1992:
 #*: Having never experienced communal '''bare-bum''' soaking European style, I was sure I'd wandered into the men's room.
-#* '''2009''', John B. Duffield, ''A Cry for Help'', ISBN 9780578028231, [http://books.google.com/books?id=v3NvAEmGFLMC&pg=PA21 page 21]:
-#*: We discovered trout and bears and foxes. And bees{{SIC}} nests! Not to mention how to swim '''bare-bum''' down rocky falls.
+#* {{quote-text|year=2009|author=John B. Duffield|title=A Cry for Help|page=21|isbn=9780578028231|url=http://books.google.com/books?id=v3NvAEmGFLMC&pg=PA21|passage=We discovered trout and bears and foxes. And bees{{SIC}} nests! Not to mention how to swim '''bare-bum''' down rocky falls.}}
 
 ====Synonyms====
 * {{l|en|bare-arse}}
