--- a/en/b/bitter pill to swallow.855106.wikitext
+++ b/en/b/bitter pill to swallow.855106.wikitext
@@ -8,8 +8,7 @@
 
 # {{&lit|bitter pill|swallow|lang=en}}
 # {{lb|en|idiomatic}} Something [[unpleasant]] that must be [[accepted]] or [[endured]].
-#* '''1886''', [[w:George Gissing|George Gissing]], ''Demos: A Story of English Socialism'', ch. 10:
-#*: [T]o see himself dethroned, the object of her contempt, was a '''bitter pill to swallow'''.
+#* {{quote-text|year=1886|author={{w|George Gissing}}|title=Demos: A Story of English Socialism|chapter=10|passage=[T]o see himself dethroned, the object of her contempt, was a '''bitter pill to swallow'''.}}
 #* '''1920''', "[http://query.nytimes.com/mem/archive-free/pdf?_r=1&res=9C07E0D91E31E03ABC4953DFB366838B639EDE Amundsen to Try Again for Pole]," ''New York Times'', 1 May, p. 14:
 #*: "[W]e cast loose from the ice after a very careful inspection which left us no hope whatsoever of penetrating it. . . . It was a '''bitter pill to swallow''', but we decided to search for Winter quarters somewhere along the coast."
 #* '''2006''', [[w:Tony Karon|Tony Karon]], "[http://www.time.com/time/world/article/0,8599,1208298,00.html Inside Iraq's 'Amnesty' Plan]," ''Time'', 26 Jun.:
