--- a/en/c/catch it.802385.wikitext
+++ b/en/c/catch it.802385.wikitext
@@ -9,8 +9,7 @@
 #*: "You'll '''catch it''', you know," said Tom, nodding his head in an admonitory manner, and hesitating a little as he took the scissors.
 #* ''a''. '''1887''', George Bernard Shaw, ''An Unsocial Socialist''
 #*: If they beat us, we shall '''catch it''', and serve us right.
-#* '''2003''', Sid Fleischman, ''The Whipping Boy'', page 39
-#*: I'll '''catch it''' for your mischief in running away. And I'll '''catch it''' again when the tutor claps eyes on the handwriting.
+#* {{quote-text|year=2003|author=Sid Fleischman|title=The Whipping Boy|page=39|passage=I'll '''catch it''' for your mischief in running away. And I'll '''catch it''' again when the tutor claps eyes on the handwriting.}}
 
 ====Synonyms====
 * {{l|en|cop it}}
