--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -52,7 +52,7 @@ From {{etyl|enm|en}} {{m|enm|thaugh}}, {{m|enm|thagh|}}, from {{etyl|ang|en}} {{
 * Occitan: {{t|oc|pasmens}}, {{t|oc|ni per tot}}, {{t|oc|ça que la}}, {{t|oc|pr'aquò}}, {{t|oc|pr'aquò}}
 * Persian: {{t+|fa|گرچه|tr=garče|sc=fa-Arab}}
 * Polish: {{t+|pl|jednak}}
-* Portuguese: no [[entanto]], {{t+|pt|não obstante}}, {{t+|pt|contudo}}
+* Portuguese: {{t|pt|[[no]] [[entanto]]}}, {{t+|pt|não obstante}}, {{t+|pt|contudo}}
 * Russian: {{t+|ru|те́м не ме́нее}}, {{t+|ru|одна́ко}}, {{t+|ru|всё-таки}}
 * Scots: {{t|sco|tho}}
 * Scottish Gaelic: {{t|gd|ge-tà}}
