--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -8,7 +8,7 @@ From {{etyl|es|en}} {{m|es|las}} {{m|es|vegas||the meadows}}.
 * {{IPA|lang=en|/lɑs ˈveɪɡəs/}}
 
 ===Proper noun===
-{{en-proper noun}}
+{{en-proper noun|head=Las Vegas}}
 
 # A desert city in [[Nevada]], USA, known for its large hotels, extravagant entertainment and dining, and [[gambling]].
 # A city in [[New Mexico]]
