/* Quotations */ <hold with the hare and run with the hounds#42598615>

--- a/en/h/hold with the hare and run with the hounds.746718.wikitext
+++ b/en/h/hold with the hare and run with the hounds.746718.wikitext
@@ -9,6 +9,8 @@
 #: ''Julianna needs to be careful if she keeps '''holding with the hare and running with the hounds'''; she might wind up making enemies of both labor and management.''
 
 ====Quotations====
+* '''1571''', {{w|Arthur Golding}}, ''The [[w:Psalms|Psalmes]] of David and others. With M. [[w:John Calvin|John Calvins]] Commentaries'', “Epistle Dedicatorie,”<sup>[https://archive.org/details/psalmesofdavidot00calv]</sup>
+*: {{...}} Laddes that canne '''holde with the Hare and hunt with the Hounde''', and (as the Scripture termeth them) time servers and men pleasers.
 * '''1678''', [[w:John Bunyan|John Bunyan]], ''[[w:The Pilgrim's Progress|The Pilgrim's Progress from This World to That Which is to Come]]''.
 *: He can throw stones with both hands--can '''hold with the hare and run with the hounds'''--carry fire in one hand and water in the other.
 * '''1871''', Mary Elizabeth Braddon. ''Belgravia''
