--- a/en/d/due course.801536.wikitext
+++ b/en/d/due course.801536.wikitext
@@ -12,8 +12,7 @@
 #*: This is all according to the '''due Course''' of Things: […].
 #* ''a''. '''1803''', Jane Austen, ''Northanger Abbey''
 #*: […] but it did not oppress them by any means so long; and, after a '''due course''' of useless conjecture, that “it was a strange business, and that he must be a very strange man,” grew enough for all their indignation and wonder; […].
-#* '''1898''', Justin McCarthy, ''The Story of Gladstone's Life'', page 27
-#*: The Reform Bill, although the Duke of Wellington described it as " a revolution by '''due course''' of law," set up in fact but a very limited suffrage, [....]
+#* {{quote-text|year=1898|author=Justin McCarthy|title=The Story of Gladstone's Life|page=27|passage=The Reform Bill, although the Duke of Wellington described it as " a revolution by '''due course''' of law," set up in fact but a very limited suffrage, [....]}}
 
 ====Quotations====
 * {{seeCites}}
