t+fr:[[richard]] ([[WT:EDIT|Assisted]]) <money bag#42610236>

--- a/en/m/money bag.720269.wikitext
+++ b/en/m/money bag.720269.wikitext
@@ -26,6 +26,7 @@
 *: Mandarin: {{t+|cmn|富翁|tr=fùwēng|sc=Hani}}
 {{trans-mid}}
 * Finnish: {{t|fi|kroisos}}
+* French: {{t+|fr|richard|m}}
 {{trans-bottom}}
 
 {{checktrans-top}}
