--- a/en/e/environmental science.855254.wikitext
+++ b/en/e/environmental science.855254.wikitext
@@ -2,7 +2,7 @@
 
 ===Noun===
 {{wikipedia}}
-{{en-noun}}
+{{en-noun|~}}
 
 # The integrated study of factors that influence the [[environment]] and environmental systems, especially the [[interaction]] of the [[physical]], [[chemical]], and [[biological]] components of the environment
 
