--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -128,11 +128,17 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 ===Etymology===
 From {{etyl|roa-oca|ca}} {{m|roa-oca|colp}}, from {{etyl|LL.|ca}} {{m|la|colpus||stroke}}, from earlier {{etyl|la|ca}} {{m|la|colaphus}}.
 
+===Pronunciation===
+* {{ca-IPA|ò}}
+
 ===Noun===
 {{ca-noun|m}}
 
 # [[hit]], [[blow]], [[strike]]
 # [[time]], [[occasion]]
+
+====Alternative forms====
+* {{l|ca|colp}} {{q|dialectal}}
 
 ====Synonyms====
 * {{sense|time, occasion}} {{l|ca|vegada}}, {{l|ca|volta}}
