t+mic:[[apli'gmuj]] t-balance ([[WT:EDIT|Assisted]]) <rabbit#42623830>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -136,10 +136,10 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Latvian: {{t|lv|trusis|m}}
 * Lithuanian: {{t+|lt|triušis|m}}
 * Lojban: {{t+|jbo|ractu}}
-{{trans-mid}}
 * Low German: 
 *: Low German: {{t|nds-de|Kanink|m|n}}, {{t|nds-de|Kaninken|m|n}}
 * Luxembourgish: {{t|lb|Kanéngchen|f}}
+{{trans-mid}}
 * Lü: {{t|khb|ᦂᦎᦻᧈ|sc=Talu}}
 * Macedonian: {{t|mk|заjак|m}}
 * Malay: {{t+|ms|arnab}}, {{t|ms|kelinci}}, {{t|ms|kucing belanda}}, {{t|ms|kuilu}}, {{t|ms|terwelu}}
@@ -151,6 +151,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Maori: {{t|mi|rāpeti}}
 * Marathi: {{t|mr|ससा|m}}, {{t|mr|सशी|f}}
 * Maricopa: {{t|mrc|xalyaw}}
+* Mi'kmaq: {{t|mic|apli'gmuj}}
 * Mirandese: {{t|mwl|coneilho|m}}
 * Mongolian: {{t+|mn|туулай|sc=Cyrl}}
 * Montagnais: {{t|moe|uapush}}
