--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -62,7 +62,7 @@ From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{etyl|xno|en}} {{m|fro|mar
 * Lithuanian: {{t+|lt|kiaunė|f}}
 * Macedonian: {{t|mk|куна|f}}
 * Manx: {{t|gv|kayt billey|m}}
-* Mi'kmaq: {{t|mic|apistanewj}}
+* Mi'kmaq: {{t|mic|apistanewj|an}}
 * Narragansett: {{t|xnt|wappenagh}}
 * Norman: {{t|nrf|martre|f}} {{qualifier|Jersey}}
 * Norwegian: {{t|no|mår}}
