--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -114,8 +114,8 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Lojban: {{t|jbo|ricyratcu}}
 * Low German:
 *: German Low German: {{t|nds-de|Katteker|m}}
-{{trans-mid}}
 * Luxembourgish: {{t+|lb|Kaweechelchen|n}}
+{{trans-mid}}
 * Lü: {{t|khb|ᦀᦲᦰᦣᦸᧅ|sc=Talu}}
 * Macedonian: {{t|mk|верверица|f}}
 * Malay:
@@ -125,6 +125,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Manx: {{t|gv|fiorag|f}}
 * Maori: {{t|mi|kirera}}
 * Marathi: {{t|mr|खार|sc=Deva}}
+* Mi'kmaq: {{t|mic|atu'tuej}}
 * Middle English: {{t|enm|aquerne|m}}
 * Mongolian: {{t+|mn|хэрэм|sc=Cyrl}}
 * Nahuatl: {{t+|nah|mōtohtli}}
