--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -125,7 +125,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Manx: {{t|gv|fiorag|f}}
 * Maori: {{t|mi|kirera}}
 * Marathi: {{t|mr|खार|sc=Deva}}
-* Mi'kmaq: {{t|mic|atu'tuej}}
+* Mi'kmaq: {{t|mic|atu'tuej|an}}
 * Middle English: {{t|enm|aquerne|m}}
 * Mongolian: {{t+|mn|хэрэм|sc=Cyrl}}
 * Nahuatl: {{t+|nah|mōtohtli}}
