--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -72,7 +72,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * {{l|en|unicum}}
 * {{l|en|vacuum}}
 * {{l|en|valium}}
-{{rel-bottom|note=: This list is very much incomplete; please help its completion by adding terms.}}
+{{rel-bottom}}
 
 =====Translations=====
 {{trans-top|Latinate singular grammatical number suffix}}
