--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -73,6 +73,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a {{m|en|
 * Luxembourgish: {{t|lb|Bisamrat}}
 * Macedonian: {{t|mk|бизамски стаорец|m}}
 * Maltese: {{t|mt|far tal-misk ta’ l-ilma}}
+* Mi'kmaq: {{t|mic|gi'gwesu}}
 * Munsee: {{t|umu|xwáshkwshush}}
 * Navajo: {{t|nv|tooh łéʼétsoh}}
 * Norwegian: {{t|no|bisamrotte}}
