t+mic:[[gulgwi's]] t-balance ([[WT:EDIT|Assisted]]) <pig#42631974>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -234,9 +234,9 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Lü: {{t-needed|khb}}
 * Macedonian: {{t|mk|свиња|f}}
 * Malay: {{t+|ms|babi}}, {{t+|ms|khinzir}}
-{{trans-mid}}
 * Malayalam: {{t+|ml|പന്നി|sc=Mlym}}
 * Maltese: {{t|mt|ħanżir|m}}, {{t|mt|qażquż|m}}
+{{trans-mid}}
 * Maléku Jaíka: {{t|gut|tunhífa}}
 * Manchu: {{t|mnc|ᡠᠯᡤᡳᠶᠠᠨ|tr=ulgiyan}}
 * Mandar: {{t|mdr|boe|sc=Bugi}}
@@ -244,6 +244,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Maori: {{t|mi|poaka}}
 * Marathi: {{t|mr|डुकर|m|sc=Deva}}
 * Mazanderani: {{t|mzn|خی|tr=xi}}
+* Mi'kmaq: {{t|mic|gulgwi's}}
 * Moksha: {{t|mdf|тува}}
 * Mongolian: {{t+|mn|гахай|sc=Cyrl}}
 * Montagnais: {{t|moe|kukush}}
