--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -244,7 +244,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Maori: {{t|mi|poaka}}
 * Marathi: {{t|mr|डुकर|m|sc=Deva}}
 * Mazanderani: {{t|mzn|خی|tr=xi}}
-* Mi'kmaq: {{t|mic|gulgwi's}}
+* Mi'kmaq: {{t|mic|gulgwi's|an}}
 * Moksha: {{t|mdf|тува}}
 * Mongolian: {{t+|mn|гахай|sc=Cyrl}}
 * Montagnais: {{t|moe|kukush}}
