--- a/en/b/barbera.745859.wikitext
+++ b/en/b/barbera.745859.wikitext
@@ -44,6 +44,21 @@ From {{etyl|it|en}} {{m|it|barbera}}
 
 ----
 
+==Spanish==
+
+===Adjective===
+{{es-adj|m=barbero}}
+
+# {{feminine of|lang=es|barbero}}
+
+===Noun===
+{{es-noun|f|m=barbero}}
+
+# the [[barber]]'s wife
+# a female [[barber]]
+
+----
+
 ==Swedish==
 
 ===Verb===
