--- a/en/i/indecorous.741298.wikitext
+++ b/en/i/indecorous.741298.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Latin ''[[in-#Latin|in-]]'' + ''[[decorus]]'', "without [[decorum]]"
+{{prefix|en|in|decorous}}
 
 ===Adjective===
 {{en-adj}}
