t+oc:[[portada]] ([[WT:EDIT|Assisted]]) <staff#42644747>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -125,6 +125,8 @@ Sense of "group of military officers that assists a commander" and similar meani
 {{trans-mid}}
 * Japanese: {{t|ja|譜表|tr=fuhyō|sc=Jpan}}, {{t|ja|五線|tr=gosen|sc=Jpan}}
 * Macedonian: {{t|mk|петолиние|n|tr=petolínie}}
+* Occitan: {{t|oc|portada|f}}
+* Occitan: {{t|oc|portada|f}}
 * Polish: {{t+|pl|pięciolinia|f}}
 * Portuguese: {{t+|pt|pauta|f}}
 * Romanian: {{t+|ro|portativ|n}}
