t+cs:[[tyč]] ([[WT:EDIT|Assisted]]) <staff#42652331>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -75,7 +75,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 * Chamicuro: {{t|ccc|chaskolo}}
 * Chinese:
 *: Mandarin: {{t+|cmn|桿|sc=Hani}}, {{t+|cmn|杆|tr=gǎn|sc=Hani}}, {{t+|cmn|棒|tr=bàng|sc=Hani}}, {{t+|cmn|杖|tr=zhàng|sc=Hani}}
-* Czech: {{t+|cs|hůl|f}}
+* Czech: {{t+|cs|hůl|f}}, {{t+|cs|tyč|f}}
 * Danish: {{t|da|stav|c}}, {{t|da|stang|c}}
 * Dutch: {{t+|nl|staf|c}}
 * Erzya: {{t|myv|мандо}}
