t+cs:[[štáb]] ([[WT:EDIT|Assisted]]) <staff#42652381>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -183,6 +183,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 
 {{trans-top|commanding officers}}
 {{trans-mid}}
+* Czech: {{t|cs|štáb|m}}
 {{trans-bottom}}
 
 ====See also====
