t+es:[[segunda venida]] ([[WT:EDIT|Assisted]]) <second coming#42660385>

--- a/en/s/second coming.746616.wikitext
+++ b/en/s/second coming.746616.wikitext
@@ -26,5 +26,5 @@
 * Portuguese: {{t|pt|segunda vinda|f}}
 * Romanian: {{t|ro|a doua venire|f}}
 * Russian: {{t-needed|ru}}
-* Spanish: {{t-needed|es}}
+* Spanish: {{t|es|segunda venida|f}}
 {{trans-bottom}}
