--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -63,7 +63,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Basque: {{t|eu|kokots}}
 * Bau Bidayuh: {{t|sne|siraka}}
 * Belarusian: {{t|be|падбаро́дак|m|sc=Cyrl}}, {{t|be|барада́|f|sc=Cyrl}} {{qualifier|also "beard"}}
-* Bengali: {{t|bn|চিবুক|tr=cibuk|sc=Beng}}
+* Bengali: {{t|bn|চিবুক|sc=Beng}}
 * Berber:
 *: Central Atlas Tamazight: {{t|tzm|tamart}}, {{timġt}}
 * Breton: {{t+|br|elgezh|f}}, {{t+|br|chik|m}}
@@ -116,8 +116,8 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Guaraní: {{t|gn|tañykãpy}}
 * Haitian Creole: {{t|ht|manton}}
 * Hausa: {{t|ha|haɓa|f|alt=haɓā̀}}
-* Hebrew: {{t+|he|סנטר|tr=santér|sc=Hebr}}
-* Hindi: {{t+|hi|ठुड्डी|f|tr=ṭhuḍḍī}}, {{t+|hi|चिबुक|f|tr=cibuk}}, {{t+|hi|ठोड़ी|f|tr=ṭhoṛī}}
+* Hebrew: {{t+|he|סַנְטֵר|tr=santér|sc=Hebr}}
+* Hindi: {{t+|hi|ठुड्डी|f}}, {{t+|hi|चिबुक|f}}, {{t+|hi|ठोड़ी|f}}
 * Hungarian: {{t+|hu|áll}}
 * Iban: {{t|iba|dagu}}
 * Icelandic: {{t+|is|haka|f}}
@@ -130,7 +130,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Iranun: {{t|ill|baka'}}
 * Irish: {{t+|ga|smig|f}}
 * Italian: {{t+|it|mento|m}}
-* Japanese: {{t+|ja|頤|tr=[[おとがい]], otogai|sc=Jpan}}, {{t+|ja|顎|tr=[[あご]], ago|sc=Jpan}}
+* Japanese: {{t+|ja|頤|tr=おとがい, otogai|sc=Jpan}}, {{t+|ja|顎|tr=あご, ago|sc=Jpan}}
 * Kabardian: {{t|kbd|жьэпкъ|sc=Cyrl}}
 * Kalmyk: {{t|xal|өргн|sc=Cyrl}}
 * Kapampangan: {{t|pam|baba}}
@@ -241,7 +241,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Taos: {{t|twf|ȍdénemą}}
 * Tatar: {{t+|tt|ияк|sc=Cyrl}}
 * Telugu: {{t+|te|గడ్డం|sc=Telu}}, {{t+|te|చుబుకం|sc=Telu}}
-* Thai: {{t+|th|คาง|tr=kaang|sc=Thai}}
+* Thai: {{t+|th|คาง|sc=Thai}}
 * Tibetan: {{t|bo|ཀོ་ཀོ}}, {{t|bo|ཨོག་མ}}
 * Tigrinya: {{t+|ti|መንከስ|sc=Ethi}}
 * Timugon Murut: {{t|tih|salura}}
@@ -268,7 +268,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Yakut: {{t|sah|сэҥийэ|sc=Cyrl}}
 * Yoruba: {{t|yo|ìgbọn}}, {{t|yo|àgbọ̀n}}
 * Yucatec Maya: {{t|yua|k'ono'ch}}
-* Yiddish: {{t|yi|גאָמבע|f|tr=gombe}}
+* Yiddish: {{t|yi|גאָמבע|f}}
 * Zulu: {{t+|zu|isilevu|c7|c8}}
 * ǃXóõ: {{t|nmn|dzàni}}
 {{trans-bottom}}
