t+cu:[[брада]] t+cu:[[ⰱⱃⰰⰴⰰ]] t-balance t+orv:[[борода]] ([[WT:EDIT|Assisted]]) <chin#42682041>

--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -137,6 +137,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Karachay-Balkar: {{t|krc|сакъал|sc=Cyrl}}
 * Karakalpak:
 *: Cyrillic: {{t|kaa|ийек|sc=Cyrl}}, {{t|kaa|буғақ|sc=Cyrl}}, {{t|kaa|алқым|sc=Cyrl}}
+*: Glagolitic: {{t|cu|ⰱⱃⰰⰴⰰ|f}}
 *: Latin: {{t|kaa|iyek}}, {{t|kaa|bug'aq}}, {{t|kaa|alqım}}
 * Karelian: {{t|krl|leugu}}
 * Kazakh: {{t|kk|иек|sc=Cyrl}}
@@ -154,9 +155,9 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Ladino: {{t|lad|keshada}}
 * Lak: {{t|lbe|лунттубакӀ|sc=Cyrl}}
 * Lao: {{t+|lo|ຄາງ|sc=Laoo}}
-{{trans-mid}}
 * Latin: {{t|la|mentum|n}}
 * Latvian: {{t|lv|zods|m}}
+{{trans-mid}}
 * Laz: {{t|lzz|ნუკუ}}, {{t|lzz|ჩენგე}}
 * Lezgi: {{t|lez|чана|sc=Cyrl}}
 * Ligurian: {{t|lij|mento|m}}
@@ -192,6 +193,9 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 * Norwegian: {{t+|no|hake}}
 * Nottoway-Meherrin: {{t|nwy|ochag}}
 * Occitan: {{t+|oc|menton|m}}
+* Old Church Slavonic:
+*: Cyrillic: {{t|cu|брада|f}}
+* Old East Slavic: {{t|orv|борода|f}}
 * Old English: {{t|ang|cinn|n|alt=ċinn}}
 *: Middle English: {{t|enm|chin}}
 * Ossetian: {{t|os|роцъо|sc=Cyrl}}, {{t|os|зекъæ|sc=Cyrl}} {{qualifier|Digor}}
