--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -28,6 +28,12 @@
 
 ==Ido==
 
+===Etymology===
+{{bor|io|es|abandonar}}, {{bor|io|fr|abandonner|notext=1}} and {{bor|io|en|abandon|notext=1}}.
+
+===Pronunciation===
+* {{IPA|lang=io|/a.ban.doˈnar/}}
+
 ===Verb===
 {{io-verb|abandon}}
 
