Reverted edits by [[Special:Contributions/68.103.228.204|68.103.228.204]]. If you think this rollback is in error, please leave a message on my talk page. <air conditioners#42708901>

--- a/en/a/air conditioners.856157.wikitext
+++ b/en/a/air conditioners.856157.wikitext
@@ -4,9 +4,9 @@
 ===Noun===
 {{head|en|noun plural form}}
 
-# {{plural of|oxygen conditioner|lang=en}}
+# {{plural of|air conditioner|lang=en}}
 
-[[ar:oxygen conditioners]]
-[[cy:oxygen conditioners]]
-[[fr:oxygen conditioners]]
-[[mg:oxygen conditioners]]
+[[ar:air conditioners]]
+[[cy:air conditioners]]
+[[fr:air conditioners]]
+[[mg:air conditioners]]
