[[Category:English terms with redundant head parameter|redundant head parameter]] <good Lord#42722635>

--- a/en/g/good Lord.741512.wikitext
+++ b/en/g/good Lord.741512.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Interjection===
-{{en-interj|head=[[good]] [[Lord]]}}
+{{en-interj}}
 
 # An exclamation of [[amazement]] or [[disapproval]].
 #* '''1993''' May 16, [[w:List of Jeeves and Wooster episodes|"Return to New York"]] [[w:Jeeves and Wooster|''Jeeves and Wooster'']], Series 3, Episode 6: 
