ety <onesie-twosie#42774118>

--- a/en/o/onesie-twosie.741286.wikitext
+++ b/en/o/onesie-twosie.741286.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-Diminutive forms of {{m|en|one}} and {{m|en|two}} with {{m|en|-ie}}.
+Diminutive forms of {{m|en|one}} and {{m|en|two}} {{suffix|en||ie}}.
 
 ===Adverb===
 {{head|en|adverb|head=[[onesie]]-twosie}}
