--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -58,6 +58,15 @@ From {{prefix|be|gān|lang=ang}}.
 * 1916, John R. Clark, "A Concise Anglo-Saxon Dictionary for the Use of Students", begān
 * 2010, J. Bosworth, An Anglo-Saxon Dictionary Online (T. N. Toller & Others, Eds.), begān
 
+----
+
+==Middle Dutch==
+
+===Verb===
+{{head|dum|verb form}}
+
+# {{inflection of|beginnen||1|and|3|s|past|indc|lang=dum}}
+
 [[ca:began]]
 [[de:began]]
 [[et:began]]
